# PhoenixWrust

./: .gitignore  Cargo.toml  Readme.md  build.rs  imgui.ini  rdoc_settings.cap  rustfmt.toml  vk_layer_settings.txt
macros/: Cargo.toml
macros/src/: lib.rs
src/: debug.rs  lib.rs  main.rs  wsketch.rs  wsketchflame.rs  wvulkan.rs
src/abs/: mod.rs  wbrdf.rs  wcam.rs  wcomputepass.rs  wfxcomposer.rs  wibl.rs  wpostpass.rs  wthing.rs  wthingnull.rs  wthingshape.rs  wthingtext.rs  wthingtrait.rs
src/abs/passes/: mod.rs  wbloompass.rs  wdofpass.rs  wfxpass.rs  wkernelpass.rs  wpostpass.rs
src/abs/thing/: mod.rs  wthing.rs  wthingnull.rs  wthingshape.rs  wthingtext.rs  wthingtrait.rs
src/models/: blender_test_a.gltf  test.gltf
src/msdf/: mod.rs  msdf.rs
src/res/: mod.rs  wbindings.rs  wbuffer.rs  wimage.rs  wmodel.rs  wpongabletrait.rs  wpushconstant.rs  wrendertarget.rs  wshader.rs  wtraitpass.rs  wvideo.rs  wwritablebuffertrait.rs
src/res/buff/: mod.rs  wbuffer.rs  wpushconstant.rs  wuniformscontainer.rs  wwritablebuffertrait.rs
src/res/img/: mod.rs  wimage.rs  wrendertarget.rs
src/shaders/: brdf.frag  buildShaders.py  composite.frag  compositeb.frag  compute.comp  cubemap.frag  cubemap.vert  flame.comp  flameMesh.comp  fullscreenQuad.vert  mesh.frag  mesh.vert  path.frag  path.vert  test.comp  text.frag  text.vert  triangle.frag  triangle.vert
src/shaders/FX/: boxblur.frag  chromab.frag  dof.frag  dofScatter.frag  dofScatter.vert  fxaa.frag  gamma.frag  kernel.frag  tonemap.frag
src/shaders/includes/: chroma.include  ddj.include  ease.include  fxrepo.include  global.include  noises.include  raymarch.include  raytrace.include  utils.include
src/shaders/sketchb/: composite.frag  tonemap_and_taa.frag
src/sys/: mod.rs  warenaitems.rs  wbarr.rs  wbindgroup.rs  wcommandencoder.rs  wcommandpool.rs  wcomputepipeline.rs  wdevice.rs  wformattools.rs  wgui.rs  winput.rs  wmanagers.rs  wpipelineconfig.rs  wrecorder.rs  wrenderpipeline.rs  wrenderstate.rs  wsemaphore.rs  wshaderman.rs  wsserver.rs  wswapchain.rs  wtime.rs  wtl.rs
src/sys/command/: mod.rs  wbarr.rs  wcommandencoder.rs
src/sys/pipeline/: mod.rs  wbindgroup.rs  wcomputepipeline.rs  wpipelineconfig.rs  wrenderpipeline.rs  wrenderstate.rs
