[package]
name = "phoenix_wrust"
version = "0.1.0"
edition = "2021"
authors = ["me"]
license = "MIT OR Apache-2.0"

# [[bin]]
# name = "phoenix_wrust"

[profile.release]
debug = 0
strip = "debuginfo"
panic = "abort"

[profile.dev]
opt-level = 0
overflow-checks = false

[profile.dev-O1]
inherits = "dev"
opt-level = 1

[profile.dev-O2]
inherits = "dev"
opt-level = 2

[profile.dev-O3]
inherits = "dev"
opt-level = 3


[dependencies]
image = "0.23"
# tobj = "3"
gltf = "1.0.0"
stb_image = "0.2.4"

log = "0.4"

arrayvec = "0.7"
generational-arena = "0.2.8"
smallvec = "1.9.0"

nalgebra-glm = "0.17.0"

notify = "5.0.0"

shaderc = "0.8.0"
spirv-reflect = "0.2.3"
spirv-tools = "0.8.0"



lazy_static = "1.4.0"
bytemuck = "1.0.0"


# rusty_ffmpeg = "0.10.0+ffmpeg.5.1"



regex = "=1.1.0"




ash = "=0.37.0+1.3.209"
ash-window = "0.11.0"

gpu-alloc = "0.5.3"
gpu-alloc-ash = "0.5.0"

winit = "=0.26"


imgui-rs-vulkan-renderer = {version = "1.5.0", features = ["gpu-allocator", "dynamic-rendering"]}
imgui =  "0.8.2"
imgui-winit-support = { version = "^0.8", default-features = false, features = ["winit-26"] }
gpu-allocator = { version = "0.19", default-features = false, features = ["vulkan"] }

# gpu-allocator = "0.19.0"
# gpu-allocator = "0.18.0"




# russimp = "1.0.3"
# russimp = {version = "=1.0.4", features = ["prebuilt", "static-link"]}
# russimp = {git = "https://github.com/wrightwriter/russimp", features = ["prebuilt"]}


# russimp-sys = "=1.0.3"
# russimp = {git= "https://github.com/jkvargas/russimp"}



renderdoc = {git="https://github.com/wrightwriter/renderdoc-rs"}

