[package]
name = "phoenix_wrust"
version = "0.1.0"
edition = "2021"
authors = ["me"]
license = "MIT OR Apache-2.0"

# [[bin]]
# name = "phoenix_wrust"
build = "build.rs"


[profile.dev]
debug-assertions = true
opt-level = 0
overflow-checks = false

[profile.devO1]
inherits = "dev"
opt-level = 1

[profile.devO2]
inherits = "dev"
opt-level = 2

[profile.devO3]
inherits = "dev"
opt-level = 3

[profile.release]
debug-assertions = false
debug = 0
strip = "debuginfo"
panic = "abort"



[dependencies]
libc = "0.2.0"

fragile = "2.0.0"

lazy_static = "1.4.0"
sync-unsafe-cell = "0.1.0"
bytemuck = "1.0.0"
log = "0.4"
regex = "=1.6.0"
serde_json = "1.0"

tracing = "0.1.37"
tracy-client = "0.14.0"
profiling = {version = "1.0.7", features=["profile-with-tracy"]}



arrayvec = "0.7"
generational-arena = "0.2.8"
smallvec = "1.9.0"
# smartstring = "1.0.1"
smallstr = "0.3"


notify = "5.0.0"

shaderc = "0.8.0"
spirv-reflect = "0.2.3"
spirv-tools = "0.8.0"

nalgebra-glm = "0.17.0"

image = "0.23"
gltf = "1.0.0"
stb_image = "0.2.4"
lyon = "1.0.0"


ffmpeg-next = {version="=5.1.1", features=["codec", "format"]}
# rapier3d = "0.15.0"
# rusty_ffmpeg = "0.10.0+ffmpeg.5.1"

macros = { path = "macros"}


winit = "=0.26"
ash = "=0.37.0+1.3.209"
ash-window = "0.11.0"

gpu-alloc = "0.5.3"
gpu-alloc-ash = "0.5.0"
gpu-allocator = { version = "0.19", default-features = false, features = ["vulkan"] }


imgui-rs-vulkan-renderer = {version = "1.5.0", features = ["gpu-allocator", "dynamic-rendering"]}
imgui =  "0.8.2"
imgui-winit-support = { version = "^0.8", default-features = false, features = ["winit-26"] }


renderdoc = {git="https://github.com/wrightwriter/renderdoc-rs"}

